--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "vite": "^5.2.0",
-    "vite-plugin-vue-remove-attributes": "^1.1.2"
+    "rollup-plugin-jsx-remove-attributes": "^2.0.3",
+    "vite": "^5.2.0"
   }
 }
